<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/nav_charts"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/charts"/>
            <item
                android:id="@+id/nav_recently_played"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/recents"/>
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/friends"/>
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>
