<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recycler_item">
        <!--This needs to become a recyclerview at some point..-->

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cover_description"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/tvArtistLabel"
            style="@style/TextStyle.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/ivCover"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/tvArtistValue"
            android:text="@string/artist"/>

        <TextView
            android:id="@+id/tvArtistValue"
            style="@style/TextStyle.Main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/ivCover"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvAlbumLabel"
            style="@style/TextStyle.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvArtistLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/tvAlbumValue"
            android:text="@string/album"/>

        <TextView
            android:id="@+id/tvAlbumValue"
            style="@style/TextStyle.Main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvArtistValue"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvTrackLabel"
            style="@style/TextStyle.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvAlbumLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/tvTrackValue"
            android:text="@string/track"/>

        <TextView
            android:id="@+id/tvTrackValue"
            style="@style/TextStyle.Main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvAlbumValue"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvDurationLabel"
            style="@style/TextStyle.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvTrackLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/tvDurationValue"
            android:text="@string/duration"/>

        <TextView
            android:id="@+id/tvDurationValue"
            style="@style/TextStyle.Main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvTrackValue"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvPublishedLabel"
            style="@style/TextStyle.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvDurationLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/tvPublishedValue"
            android:text="@string/published"/>

        <TextView
            android:id="@+id/tvPublishedValue"
            style="@style/TextStyle.Main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvDurationValue"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvListenersLabel"
            style="@style/TextStyle.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvPublishedLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/tvListenersValue"
            android:text="@string/listeners"/>

        <TextView
            android:id="@+id/tvListenersValue"
            style="@style/TextStyle.Main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvPublishedValue"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvPlayCountLabel"
            style="@style/TextStyle.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvListenersLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/tvListenersValue"
            android:text="@string/playCount"/>

        <TextView
            android:id="@+id/tvPlayCountValue"
            style="@style/TextStyle.Main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvListenersValue"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvBioLabel"
            style="@style/TextStyle.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/tvPlayCountLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/bio"/>

        <TextView
            android:id="@+id/tvBioValue"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBioLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBarCircular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>